Added some very basic cookies support (e.g. lacks signing), and a very basic Session middleware.

--- a/Samples/express-simple/views/footer.mustache
+++ b/Samples/express-simple/views/footer.mustache
@@ -1,3 +1,6 @@
+{{#viewCount}}
+  Views: {{viewCount}}
+{{/viewCount}}
     <hr />
     <div class="row">
       <div class="large-12 small-centered columns" style="text-align: center;">
