Support for more than 400 🐮s!!

--- a/Samples/express-simple/views/index.html
+++ b/Samples/express-simple/views/index.html
@@ -1,5 +1,8 @@
 {{> header}}
 
+  <center><pre style="border: 1px solid #DEDEDE; margin: 1em; padding: 0.5em;"
+    >{{cowOfTheDay}}</pre></center>
+
   <div class="menu-centered">
     <ul class="menu">
       <li><a href="/form">Form</a></li>
