Render cows properly: <center> does not play well with <pre>

--- a/Samples/express-simple/views/index.html
+++ b/Samples/express-simple/views/index.html
@@ -1,7 +1,7 @@
 {{> header}}
 
-  <center><pre style="border: 1px solid #DEDEDE; margin: 1em; padding: 0.5em;"
-    >{{cowOfTheDay}}</pre></center>
+  <pre style="border: 1px solid #DEDEDE; margin: 1em; padding: 0.5em;"
+    >{{cowOfTheDay}}</pre>
 
   <div class="menu-centered">
     <ul class="menu">
